grammar2.txt
### Grammar for the programming language Ramsey.
## Add all productions in their respective terminals, put undecided productions and terminals beyond the line.

<program> 	   	-> <top_lvl_stmts>
<top_lvl_stmts> 	-> <top_lvl_stmt> <endl> <top_lvl_stmts>
				| ε
<top_lvl_stmt>		-> fun <ident> (<params>) as <type> <endl> <stmts> endfun
				| ε
<params>	   	-> <param> <paramlist>
			   	| ε
<paramlist>		-> <comma> <params>
				| ε
<param>		   	-> <type> <ident>
				| <topexpression> 
<stmts>		   	-> <stmt> <endl> <stmts>
				| ε

<stmt>		   	-> <conditional>
				| ε
				| toss <topexpression>
				| <varhandler>
<varhandler>  -> <ident> <assignment>
        | <declaration> <catassign>
<declaration>		-> <type> <ident>
<assignment>	-> <- <topexpression>
<catassign>   -> <assignment>
        | ε
<conditional>  	-> if (<topexpression>) <endl> <stmts> <elfears> endif
			    | while (<topexpression>) \n <stmts> endwhile
<elfears>	   	-> elf ( <topexpression> ) <stmts> <elfears>
			    | else <stmts>
			    | ε
<topexpression> -> <expression><expressionlist>
        | (<expression><expressionlist>) <expressionlist>
<expressionlist>  -> <sop> <topexpression>
        | ε
<expression>   	-> <ident> <funcall>
				| <literals>
				| NOT (<topexpression>)
<funcall>       -> ( <params> )
        | ε
<fop>			-> *
				|  /
				|  %
				|  <
				|  >
				|  <=
				|  >=
				|  =
				|  !=
				| AND
				| OR
<sop>     -> +
        | -
        | <fop>

<literals>		-> <literal>
				|  <true>
				|  <false>
<literal> 		-> <digit><digit>*
<ident>			-> <letter><letter|digit|underscore>*
<type>			-> in
				| boo
				| big
				| small
#################### PUT UNSURE PRODUCTIONS AND TERMINALS BEYOND HERE ########################################





#################### PUT LOGICAL FLAWS WITH RAMSEY BEYOND HERE ########################################
## PROBLEM #1 ##
